reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__field_all_python_keywords-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Keywords"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Keywords"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Keywords": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Keywords",
        "required": [
          "class",
          "from",
          "import",
          "type"
        ],
        "properties": {
          "class": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "from": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "import": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "type": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
