reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__field_all_python_keywords.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Keywords"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Keywords"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Keywords",
        "fields": {
          "named": [
            {
              "name": "type",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "class",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "from",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "import",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Keywords",
        "fields": {
          "named": [
            {
              "name": "type",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "class",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "from",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "import",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
