reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__field_names_with_special_chars-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.SpecialNames"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.SpecialNames"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.SpecialNames": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.SpecialNames",
        "required": [
          "Content-Type",
          "has spaces",
          "x.nested.key"
        ],
        "properties": {
          "Content-Type": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "has spaces": {
            "$ref": "#/components/schemas/u32"
          },
          "x.nested.key": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
