reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__field_names_with_special_chars.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::SpecialNames"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::SpecialNames"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::SpecialNames",
        "fields": {
          "named": [
            {
              "name": "Content_Type",
              "serde_name": "Content-Type",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "nested_key",
              "serde_name": "x.nested.key",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "has_spaces",
              "serde_name": "has spaces",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::SpecialNames",
        "fields": {
          "named": [
            {
              "name": "Content_Type",
              "serde_name": "Content-Type",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "nested_key",
              "serde_name": "x.nested.key",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "has_spaces",
              "serde_name": "has spaces",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
